--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,16 +4,16 @@
 
 @layer base {
   :root {
-    /* --background: 0 0% 100%; */
+    --custom-text: 217.9 10.6% 64.9%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
     --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
+    --popover-foreground: 0 0% 89.8%;
     --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
+    --secondary: 220 8.9% 46.1%;
+    --secondary-foreground: 220 14.3% 95.9%;
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
     --accent: 210 40% 96.1%;
